--- a/NancyIntro.csproj
+++ b/NancyIntro.csproj
@@ -85,6 +85,7 @@
     <Content Include="Content\Scripts\bootstrap.min.js" />
     <Content Include="Content\Scripts\jquery-1.9.1.js" />
     <Content Include="Content\Scripts\jquery-1.9.1.min.js" />
+    <Content Include="index.html" />
     <Content Include="Web.config" />
     <Content Include="Content\Scripts\jquery-1.9.1.min.map" />
   </ItemGroup>
